--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
-config/default.json
+/config/default.json
+
+/client/build
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
